bin/tests/snapshots/inherit_blank_line__3654d57478c67b9d275f8f588281e65a_fix.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  owner = "me";
  inherit system;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,5 @@
 {
-  owner = "me";
   inherit system;
+
+  owner = "me";
 }
