bin/tests/snapshots/inherit_blank_line__3654d57478c67b9d275f8f588281e65a_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  owner = "me";
  inherit system;
}
---
<temp_file_path>>3:3:W:38:[inherit_first] `inherit` should come before the assignments above it
