bin/tests/snapshots/inherit_blank_line__3654d57478c67b9d275f8f588281e65a_lint_stderr.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  owner = "me";
  inherit system;
}
---
[inherit_first] Warning: `inherit` is not at the top of the set
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit system;
   │   ───────┬───────  
   │          ╰───────── inherit should come before the assignments above it
───╯
