bin/tests/snapshots/inherit_blank_line__9002cd214caa62c6cd9f2486967e21aa_fix.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inputs = {
    inherit system;
    owner = "me";
  };
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,7 @@
 {
   inputs = {
     inherit system;
+
     owner = "me";
   };
 }
