bin/tests/snapshots/inherit_blank_line__9002cd214caa62c6cd9f2486967e21aa_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inputs = {
    inherit system;
    owner = "me";
  };
}
---
<temp_file_path>>4:5:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
