bin/tests/snapshots/inherit_blank_line__9002cd214caa62c6cd9f2486967e21aa_lint_json.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inputs = {
    inherit system;
    owner = "me";
  };
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 5
            },
            "to": {
              "line": 4,
              "column": 18
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 12
              },
              "to": {
                "line": 5,
                "column": 4
              }
            },
            "fix": "{\n    inherit system;\n\n    owner = \"me\";\n  }"
          }
        }
      ]
    }
  ]
}
