bin/tests/snapshots/inherit_blank_line__9002cd214caa62c6cd9f2486967e21aa_lint_stderr.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inputs = {
    inherit system;
    owner = "me";
  };
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:4:5 ]
   │
 4 │     owner = "me";
   │     ──────┬──────  
   │           ╰──────── a blank line should follow the inherit above
───╯
