bin/tests/snapshots/inherit_blank_line__b5a0e630f4bd1dda8b56a76839bd0459_fix.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  inherit arch;
  owner = "me";
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 {
   inherit system;
   inherit arch;
+
   owner = "me";
 }
