bin/tests/snapshots/inherit_blank_line__b5a0e630f4bd1dda8b56a76839bd0459_lint_errfmt.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  inherit arch;
  owner = "me";
}
---
<temp_file_path>>4:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
<temp_file_path>>3:3:W:37:[collapsible_inherits] These consecutive `inherit` statements can be merged into one
