bin/tests/snapshots/inherit_blank_line__b5a0e630f4bd1dda8b56a76839bd0459_lint_json.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  inherit arch;
  owner = "me";
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 16
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "{\n  inherit system;\n  inherit arch;\n\n  owner = \"me\";\n}"
          }
        }
      ]
    }
  ]
}
