bin/tests/snapshots/inherit_blank_line__b5a0e630f4bd1dda8b56a76839bd0459_lint_stderr.snap
---
source: bin/tests/inherit_blank_line.rs
---
{
  inherit system;
  inherit arch;
  owner = "me";
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   owner = "me";
   │   ──────┬──────  
   │         ╰──────── a blank line should follow the inherit above
───╯
[collapsible_inherits] Warning: Consecutive inherit statements are collapsible
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit arch;
   │   ──────┬──────  
   │         ╰──────── These consecutive inherit statements can be merged into one
───╯
